<?xml version="1.0" encoding="utf-8"?>

<!--
 * Created by 
 * FrogoBox Inc License
 * =========================================
 * 
 * Copyright (C) .      
 * All rights reserved
 * 
 * Name     : Muhammad Faisal Amir
 * E-mail   : faisalamircs@gmail.com
 * Line     : bullbee117
 * Phone    : 081357108568
 * Majors   : D3 Teknik Informatika 2016
 * Campus   : Telkom University
 * 
 * id.amirisback.frogobox
 * 
 -->

<resources>
    <!--Penamaan ID : {tipe}_{nama file xml}_{elemen xml}_{nama id}-->

    <!--activity  = act-->
    <!--fragment  = frg-->
    <!--content   = ctn-->
    <!--item_list = itl-->

    <!--mahasiswa = mhs-->
    <!--dosen     = dsn-->

    <!--Contoh : act_main_edittext_username-->
    <!--Contoh : frg_mhs_monev_textview_nilai-->
    <!--Contoh : act_dsn_info_recyclerview_list-->

    <item type="id" name="act_main_edittext_username"/>
    <item type="id" name="act_main_edittext_password"/>
    <item type="id" name="act_main_button_login"/>
    <item type="id" name="act_main_textview_klikdisini"/>
    <item type="id" name="act_main_textview_title"/>

    <!--=========================================================================================-->

    <item type="id" name="act_dsn_home_bottom_navigation"/>
    <item type="id" name="act_dsn_home_viewpager"/>

    <item type="id" name="act_dsn_info_edittext_judul"/>
    <item type="id" name="act_dsn_info_edittext_konten"/>
    <item type="id" name="act_dsn_info_check_bimbingan"/>
    <item type="id" name="act_dsn_info_check_review"/>
    <item type="id" name="act_dsn_info_button_simpan"/>

    <item type="id" name="act_dsn_info_detail_textview_judul"/>
    <item type="id" name="act_dsn_info_detail_textview_tanggal"/>
    <item type="id" name="act_dsn_info_detail_textview_dosen"/>
    <item type="id" name="act_dsn_info_detail_textview_isi"/>

    <item type="id" name="act_dsn_judul_pa_button_simpan"/>
    <item type="id" name="act_dsn_judul_pa_edittext_judul"/>
    <item type="id" name="act_dsn_judul_pa_edittext_kategori"/>
    <item type="id" name="act_dsn_judul_pa_edittext_deskripsi"/>

    <item type="id" name="frg_dsn_info_home_recyclerview"/>
    <item type="id" name="frg_dsn_info_home_fab"/>

    <item type="id" name="frg_dsn_mhs_home_tablayout"/>
    <item type="id" name="frg_dsn_mhs_home_viewpager"/>

    <item type="id" name="frg_dsn_judulpa_home_tablayout"/>
    <item type="id" name="frg_dsn_judulpa_home_viewpager"/>

    <item type="id" name="frg_dsn_judul_dsn_recyclerview"/>
    <item type="id" name="frg_dsn_judul_dsn_fab"/>

    <item type="id" name="frg_dsn_judul_mhs_recyclerview"/>

    <item type="id" name="frg_dsn_mhs_bimbingan_recyclerview"/>
    <item type="id" name="frg_dsn_mhs_monev_recyclerview"/>
    <item type="id" name="frg_dsn_mhs_sidang_recyclerview"/>

    <item type="id" name="frg_dsn_monev_fab"/>
    <item type="id" name="frg_dsn_bimbingan_fab"/>

    <item type="id" name="bottom_menu_dsn_informasi"/>
    <item type="id" name="bottom_menu_dsn_mahasiswa"/>
    <item type="id" name="bottom_menu_dsn_judulpa"/>

    <!--=========================================================================================-->

    <item type="id" name="act_mhs_home_bottom_navigation"/>
    <item type="id" name="act_mhs_home_viewpager"/>

    <item type="id" name="act_mhs_info_detail_textview_judul"/>
    <item type="id" name="act_mhs_info_detail_textview_tanggal"/>
    <item type="id" name="act_mhs_info_detail_textview_dosen"/>
    <item type="id" name="act_mhs_info_detail_textview_isi"/>

    <item type="id" name="act_mhs_pa_bimbingan_detail_textview_dosen"/>
    <item type="id" name="act_mhs_pa_bimbingan_detail_textview_jumlah"/>
    <item type="id" name="act_mhs_pa_bimbingan_detail_recyclerview"/>

    <item type="id" name="act_mhs_pa_monev_detail_textview_dosen"/>
    <item type="id" name="act_mhs_pa_monev_detail_textview_jumlah"/>
    <item type="id" name="act_mhs_pa_monev_detail_recyclerview"/>

    <item type="id" name="act_dsn_mhs_bimbingan_detail_tablayout"/>
    <item type="id" name="act_dsn_mhs_bimbingan_detail_viewpager"/>

    <item type="id" name="act_dsn_mhs_monev_detail_tablayout"/>
    <item type="id" name="act_dsn_mhs_monev_detail_viewpager"/>

    <item type="id" name="bottom_menu_mhs_informasi"/>
    <item type="id" name="bottom_menu_mhs_proyekakhir"/>
    <item type="id" name="bottom_menu_mhs_judulpa"/>

    <item type="id" name="frg_mhs_info_recyclerview"/>

    <item type="id" name="frg_mhs_pa_textview_kelompokpa"/>
    <item type="id" name="frg_mhs_pa_textview_judulpa"/>
    <item type="id" name="frg_mhs_pa_textview_nim_1"/>
    <item type="id" name="frg_mhs_pa_textview_nim_2"/>
    <item type="id" name="frg_mhs_pa_textview_nama_1"/>
    <item type="id" name="frg_mhs_pa_textview_nama_2"/>
    <item type="id" name="frg_mhs_pa_textview_dsn_pembimbing"/>
    <item type="id" name="frg_mhs_pa_textview_dsn_reviewer"/>
    <item type="id" name="frg_mhs_pa_textview_jml_bimbingan"/>
    <item type="id" name="frg_mhs_pa_textview_jml_monev"/>
    <item type="id" name="frg_mhs_pa_cardview_bimbingan"/>
    <item type="id" name="frg_mhs_pa_cardview_monev"/>

    <item type="id" name="frg_mhs_judul_pa_tablayout"/>
    <item type="id" name="frg_mhs_judul_pa_viewpager"/>

    <item type="id" name="frg_mhs_judul_pa_dosen_recyclerview"/>

    <!--=========================================================================================-->

    <item type="id" name="ctn_dsn_info_textview_judul"/>
    <item type="id" name="ctn_dsn_info_textview_isi"/>
    <item type="id" name="ctn_dsn_info_textview_tanggal"/>

    <item type="id" name="ctn_dsn_judul_dsn_textview_judul"/>
    <item type="id" name="ctn_dsn_judul_dsn_textview_kategori"/>

    <item type="id" name="ctn_dsn_judul_mhs_textview_judul"/>
    <item type="id" name="ctn_dsn_judul_mhs_textview_kategori"/>

    <item type="id" name="ctn_dsn_mhs_bimbingan_textview_nama"/>
    <item type="id" name="ctn_dsn_mhs_bimbingan_textview_nim"/>
    <item type="id" name="ctn_dsn_mhs_bimbingan_textview_kelompok"/>
    <item type="id" name="ctn_dsn_mhs_bimbingan_circle_image"/>

    <item type="id" name="ctn_dsn_mhs_monev_textview_nama"/>
    <item type="id" name="ctn_dsn_mhs_monev_textview_nim"/>
    <item type="id" name="ctn_dsn_mhs_monev_textview_kelompok"/>
    <item type="id" name="ctn_dsn_mhs_monev_circle_image"/>

    <item type="id" name="ctn_dsn_mhs_sidang_textview_nama"/>
    <item type="id" name="ctn_dsn_mhs_sidang_textview_nim"/>
    <item type="id" name="ctn_dsn_mhs_sidang_textview_kelompok"/>
    <item type="id" name="ctn_dsn_mhs_sidang_circle_image"/>

    <!--=========================================================================================-->

    <item type="id" name="ctn_mhs_info_textview_judul"/>
    <item type="id" name="ctn_mhs_info_textview_isi"/>
    <item type="id" name="ctn_mhs_info_textview_tanggal"/>

    <item type="id" name="ctn_mhs_pa_monev_textview_tanggal"/>
    <item type="id" name="ctn_mhs_pa_monev_textview_komentar"/>
    <item type="id" name="ctn_mhs_pa_monev_textview_nilai"/>

    <item type="id" name="ctn_mhs_pa_bimbingan_textview_tanggal"/>
    <item type="id" name="ctn_mhs_pa_bimbingan_textview_isi"/>

    <item type="id" name="ctn_mhs_judul_pa_dosen_textview_judul"/>
    <item type="id" name="ctn_mhs_judul_pa_dosen_textview_kategori"/>
    <item type="id" name="ctn_mhs_judul_pa_dosen_textview_jumlah"/>

    <!--=========================================================================================-->

    <item type="id" name="toolbar_menu_profil"/>
    <item type="id" name="toolbar_menu_keluar"/>
    <item type="id" name="toolbar_menu_ubah"/>
    <item type="id" name="toolbar_menu_hapus"/>
    <item type="id" name="toolbar_menu_hanya_ubah"/>

    <!--Dosen-->
    <item type="id" name="act_dsn_judul_pa_spinner_kategori"/>
    <item type="id" name="act_dsn_pmb_recyclerview"/>
    <item type="id" name="ctn_dsn_pemberitahuan_circle_image"/>

    <!--Mahasiswa-->
    <!--Super User-->
    <item type="id" name="frg_koor_info_home_recyclerview"/>
    <item type="id" name="frg_koor_info_home_fab"/>
    <item type="id" name="profile_header_container" />
    <item type="id" name="profile_body_container" />


</resources>