<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/container_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_big_16dp"
        tools:context=".activities.MahasiswaJudulPaMandiriPengajuanActivity">

        <ImageView
            android:layout_width="@dimen/dimen_profil_photo"
            android:layout_height="@dimen/dimen_profil_photo"
            android:src="@drawable/ic_editor_judul_pa"
            android:layout_marginBottom="@dimen/dimen_big_ultra_32dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_judul_proyek_akhir"
            android:layout_marginBottom="@dimen/dimen_small_4dp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/act_mhs_pa_mandiri_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_big_16dp"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_medium_16sp"
            android:inputType="text"
            android:layout_marginStart="-4dp"
            android:layout_marginEnd="-4dp"
            android:hint="@string/hint_masukkan_judul_pa"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_kategori"
            android:layout_marginBottom="@dimen/dimen_small_4dp"
            android:textColor="@color/colorPrimary"/>


        <Spinner
            android:id="@+id/act_mhs_list_kategori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-8dp"
            android:layout_marginEnd="-16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_deskripsi_judul_pa"
            android:layout_marginBottom="@dimen/dimen_small_4dp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/act_mhs_pa_mandiri_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_big_16dp"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_medium_16sp"
            android:inputType="textMultiLine"
            android:layout_marginStart="-4dp"
            android:layout_marginEnd="-4dp"
            android:hint="@string/hint_masukkan_deskripsi_judul_pa"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_dosen_pembimbing"
            android:layout_marginBottom="@dimen/dimen_small_4dp"
            android:textColor="@color/colorPrimary"/>

        <Spinner
            android:id="@+id/act_mhs_list_dosen_pengajuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-8dp"
            android:layout_marginEnd="-16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nim_anggota_1"
            android:layout_marginBottom="@dimen/dimen_small_4dp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/act_mhs_pa_mandiri_nim_anggota_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_big_16dp"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_medium_16sp"
            android:text="@string/dummy_anggota_nim_1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nama_anggota_1"
            android:layout_marginBottom="@dimen/dimen_small_4dp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/act_mhs_pa_mandiri_nama_anggota_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_big_16dp"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_medium_16sp"
            android:text="@string/dummy_anggota_kelompok_1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nim_anggota_2"
            android:layout_marginBottom="@dimen/dimen_small_4dp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/act_mhs_pa_mandiri_nim_anggota_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_big_16dp"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_medium_16sp"
            android:inputType="number"
            android:layout_marginStart="-4dp"
            android:imeOptions="actionSearch"
            android:layout_marginEnd="-4dp"
            android:hint="@string/hint_masukkan_nim"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nama_anggota_2"
            android:layout_marginBottom="@dimen/dimen_small_4dp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/act_mhs_pa_mandiri_nama_anggota_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_big_16dp"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_medium_16sp"
            android:text="@string/hint_masukkan_nim"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nama_kelompok"
            android:layout_marginBottom="@dimen/dimen_small_4dp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/act_mhs_pa_mandiri_kelompok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_big_16dp"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_medium_16sp"
            android:inputType="text"
            android:layout_marginStart="-4dp"
            android:layout_marginEnd="-4dp"
            android:hint="@string/hint_masukkan_nama_kelompok"/>

        <include layout="@layout/content_all_upload_file_proposal"/>

        <Button
            android:id="@+id/act_mhs_pa_mandiri_simpan"
            android:text="@string/text_ajukan_judul"
            style="@style/button_all_primary"/>

    </LinearLayout>
</ScrollView>