...
        <EditText
            android:layout_marginTop="@dimen/dimen_medium_8dp"
            android:layout_marginBottom="@dimen/dimen_big_ultra_32dp"
            android:hint="@string/hint_review_bimbingan"
            android:inputType="textMultiLine"
            android:layout_marginStart="-4dp"
            android:id="@+id/act_mhs_info_edittext_konten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/act_mhs_info_button_simpan"
            android:text="@string/button_click_ubah_bimbingan"
            style="@style/button_all_primary"/>

    </LinearLayout>

</ScrollView>
...
