...
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/enable_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:scrollbars="none">

            <LinearLayout
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_big_16dp"
                    android:text="@string/title_bimbingan" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/frg_mhs_pa_cardview_bimbingan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:elevation="14dp"
                    android:focusable="true">

...
