...
        </androidx.recyclerview.widget.RecyclerView>

        <!-- Empty View -->
        <include layout="@layout/content_list_all_is_empty"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/act_mhs_bimbingan_tambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/dimen_big_16dp"
            android:src="@drawable/ic_fab_add"/>
...
